# zh-bn-legal-corpus

./: .gitignore  .vercelignore  Dockerfile  README.md  START_BACKEND.md  docker-compose.yml  pyproject.toml  start-backend.ps1  vercel.json  启动前端服务.md  启动后端-完整步骤.md  启动后端-最终步骤.md  启动后端-简单步骤.md  启动后端服务.md  快速启动指南.md  问题修复说明.md
backend/: README.md
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  terms.py
backend/app/api/v1/: corpus.py  health.py
backend/app/management/: load_corpus.py
backend/app/models/: corpus.py  terms.py
backend/app/search/: indexer.py
backend/app/services/: alignment.py
backend/data/: terms.json
backend/tests/: test_terms_repository.py
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(corpus)/: page.tsx
tests/corpus/: test_alignment.py  test_search.py
